--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+
+.gradient-bg{
+    /* ff 3.6+ */
+    background:-moz-radial-gradient(circle at 5% 75%, #47CDC2 0%, #154BD2 100%);
+
+    /* safari 5.1+,chrome 10+ */
+    background:-webkit-radial-gradient(circle at 5% 75%, #47CDC2 0%, #154BD2 100%);
+
+    /* opera 11.10+ */
+    background:-o-radial-gradient(circle at 5% 75%, #47CDC2 0%, #154BD2 100%);
+
+    /* ie 10+ */
+    background:-ms-radial-gradient(circle at 5% 75%, #47CDC2 0%, #154BD2 100%);
+
+    /* global 92%+ browsers support */
+    background:radial-gradient(circle at 5% 75%, #47CDC2 0%, #154BD2 100%);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.section__padding {
+  padding: 2rem 4rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.section__margin {
+  margin: 2rem 3rem 0;
+}
+
+.App__container{
+  background:url('./images/feather.png') repeat;
+}
+
+.App__experience{
+  display:flex;
+  flex-direction:column;
+}
+
+@media (max-width:550px){
+  .App__container{
+    display:flex;
+    flex-direction:column;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+  .App__heading{
+    display:flex;
+    flex-direction:column;
   }
 }
