--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -9,8 +9,8 @@
    display:flex;
    flex:1;
    flex-direction:column;
-   justify-content:center;
-   align-items:center;
+   justify-content:flex-end;
+   align-items:flex-end;
    line-height:45px;
    font-size:25px;
   }
@@ -23,7 +23,7 @@
     justify-content:flex-end;
     font-size:22px;
     font-weight:500;
-    align-items:center;
+    align-items:flex-end;
   }
 
   .App__navbar-details div{
